tests/files/flow_controller_tests/should_run/081.cmdr
x = 5;
print cosh(x);