tests/files/flow_controller_tests/should_fail/078.cmdr
x = false;
print arcsin(x);